# internal/controller/http/router.go
@@ -94,5 +94,6 @@ func NewRouter(engine *gin.Engine, l *logger.Logger, config *config.Config, useC
 		news.PUT("/update", handlerV1.UpdateBanner)
 		news.DELETE("/delete", handlerV1.DeleteBanner)
 		news.DELETE("/image/delete", handlerV1.DeleteImage)
+		news.GET("images/list", handlerV1.ListImages)
 	}
 }
